# libmesh

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac
examples/dphil/coupled_navier_stokes/: 2d_lid_inexactpressure_pre_stokes_p1p1.sh  2d_lid_inexactpressure_pre_stokes_p2p1.sh  2d_lid_pcd_pre_p1p1.sh  2d_lid_pcd_pre_p2p1.sh  2d_pipeflow_inexactpressure_pre_stokes_p1p1.sh  2d_pipeflow_inexactpressure_pre_stokes_p2p1.sh  2d_pipeflow_pressure_pre_stokes_p1p1.sh  2d_pipeflow_pressure_pre_stokes_p2p1.sh  3d_bifurcpipeflow_pressure_pre_stokes_p1p1_opt_alpha.sh  3d_bifurcpipeflow_pressure_pre_stokes_p2p1.sh  3d_pipeflow_inexactpressure_pre_stokes_p1p1.sh  3d_pipeflow_inexactpressure_pre_stokes_p2p1.sh  3d_pipeflow_pressure_pre_stokes_p1p1.sh  3d_pipeflow_pressure_pre_stokes_p2p1.sh  Makefile.am  Makefile.in  airway.C  airway.h  airway_tree.C  airway_tree.h  augment_sparsity_acinar.C  augment_sparsity_acinar.h  augment_sparsity_combined.h  augment_sparsity_moghadam.C  augment_sparsity_moghadam.h  augment_sparsity_on_interface.C  augment_sparsity_on_interface.h  ball_boundary_flagging.h  compare_traction4_script.sh  compare_traction_script.sh  coupled_assembler.h  coupled_initialization.h  coupled_navier_stokes.C  coupled_navier_stokes.h  coupled_navier_stokes_1d_functions.C  coupled_navier_stokes_3d_functions.C  coupled_navier_stokes_particle_deposition_functions.C  coupled_navier_stokes_petsc_solver_routines.C  coupling_read_files.m  coupling_script.sh  (+72 more)
examples/dphil/coupled_navier_stokes/matlab_scripts/: calculate_preconditioner_eigenvalues.m  comparison_of_eigenvalues  (+50 more)
(+462 files in other folders)
